books searching created

--- a/app/src/main/res/layout/activity_books.xml
+++ b/app/src/main/res/layout/activity_books.xml
@@ -47,25 +47,14 @@
             android:text="@string/search_btn_name" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/text_titleFound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/text_authorFound"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerFoundedBooks"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
-    <TextView
-        android:id="@+id/text_authorFound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:text=""
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="170dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
